# example_ros_1_package_template

./: LICENSE  README.md  catkin_create_pkg-my_package-roscpp-std_msgs.txt
my_package/: CMakeLists.txt  package.xml
my_package/include/my_package/: Node.hpp
my_package/launch/: my_package.launch
my_package/src/: Node.cpp
